PIE-59: general cleanup and spacing fixes

--- a/style.css
+++ b/style.css
@@ -8,37 +8,8 @@ Version: 1.0.0
 Text Domain: patientsineducation
 */
 
-/* UNDER-NAVBAR */
-.pie-under-navbar {
-  background-image: url(/wp-content/themes/patientsineducation/assets/svg/under-navbar.svg);
-  background-size: 100% 100%;
-}
-
-.pie-under-navbar p {
-  line-height: 1.875rem;
-  padding: 1rem 15% 4rem;
-}
-
-/* FOOTER */
-.pie-footer {
-  background: #2E2A2B;
-  color: #F9F9F9;
-  line-height: 1.875rem;
-  padding: 3rem 1.5rem 1.25rem;
-}
-
-.pie-prefooter {
-  background: #525252;
-  color: #F9F9F9;
-}
-
-.pie-footer ul, li {
-  list-style: none;
-  padding-left: 0;
-}
-
 /* CONTACT FORMS */
-.cftab, .cf-form {
+/* .cftab, .cf-form {
   font-family: Quicksand, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: bold;
 }
@@ -66,4 +37,4 @@ Text Domain: patientsineducation
 span.has-free-text  label {
   width:auto;
   min-width:auto;
-}
+} */
